--- a/collections/feedback/a.html
+++ b/collections/feedback/a.html
@@ -86,7 +86,7 @@
     <div id="feedback-text">
         <label for="feedback-textarea">
             <h2 class="font-consistent">
-                We do appreciate and value for your feedback
+                We do appreciate and value your feedback
             </h2>
         </label>
         <textarea name="feedback-texarea"></textarea>
